fix: power編輯器圖片之間不想要gap

--- a/js/src/assets/scss/_BlockNote.scss
+++ b/js/src/assets/scss/_BlockNote.scss
@@ -29,6 +29,10 @@
 		}
 	}
 
+	.bn-block-content:has(img) {
+		padding: 0px;
+	}
+
 	.bn-block-content {
 		&[data-content-type="customHTML"] {
 			> div {
